# dwell

./: LICENSE  README.md  conf.py.sample  pyproject.toml
dwell/: __init__.py  app.py  model.py
dwell/web/: __init__.py  admin.py  indieauth.py  micropub.py  site.py
sql/: create-database.sql
static/css/: archive.css  monthly.css  on-this-day.css  overview.css  photos.css  style.css
static/fonts/playfair-display/: PlayfairDisplay-Black.eot  PlayfairDisplay-BlackItalic.eot  PlayfairDisplay-Bold.eot  PlayfairDisplay-BoldItalic.eot  PlayfairDisplay-Italic.eot  PlayfairDisplay-Regular.eot  stylesheet.css
static/fonts/raleway/: demo.html  stylesheet.css
static/js/: admin.js  on-this-day.js  overview.js
templates/: about.html  feed.html  footer.html  header.html  now.html  on-this-day.html  overview.html  photos.html  post-detail.html  post.html  shell.html
templates/admin/: index.html  login.html
templates/admin/kinds/: entry.html  like.html  listen.html  photo.html  recipe.html  reply.html  review.html  status.html
templates/archive/: day.html  index.html  month.html
templates/archive/kinds/: checkin.html  entry.html  like.html  listen.html  photo.html  play.html  reply.html  status.html  watching.html
templates/indieauth/: auth.html  urlencode.html
templates/kinds/: post.html
templates/kinds/checkin/: content.html
templates/kinds/generic/: content.html  title.html
templates/kinds/like/: content.html  title.html
templates/kinds/listen/: content.html  title.html
templates/kinds/photo/: content.html
templates/partials/: map.html  paginate.html
(+8 files in other folders)
