[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Dwell"
version = "2024.1.6"
dependencies = [
  "arrow",
  "black",
  "flake8",
  "duckdb>0.9.1",
  "Flask>=3.0.0",
  "hashfs>0.7.0",
  "jwt>1.3.0",
  "python-slugify>8.0.0"
]
requires-python = ">=3.10"
authors = [
  {name = "Jonathan LaCour", email = "jonathan@cleverdevil.org"}
]
maintainers = [
  {name = "Jonathan LaCour", email = "jonathan@cleverdevil.org"}
]
description = "An IndieWeb CMS for personal websites, powered by DuckDB"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["cms", "duckdb", "indieweb", "website"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://dwell.cleverdevil.io"
Repository = "https://github.com/cleverdevil/dwell.git"
"Bug Tracker" = "https://github.com/cleverdevil/dwell/issues"
